--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
    .img-wrapper {
   position: relative;
   width: 100%;
+  
  }
 
 .img-overlay {
@@ -28,6 +29,7 @@
   left: 0;
   right: 0;
   text-align: center;
+  ;
   
 }
 
@@ -41,11 +43,9 @@
   </style>
 
   <body>
-    <div
-      class="navbar-container" 
-    >
-      <nav class="navbar navbar-expand-lg bg-body-tertiary" style="padding:0;" >
-        <div class="container-fluid" style="background-image: url(./images/landing-background.jpg);" cover;">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="padding:0;" >
+  
+        <div class="container-fluid" style="background-image: url(./images/landing-background.jpg);">
           <a class="navbar-brand" href="index.html"
             ><img
               src="./images/jj-gold-logo.png"
@@ -59,12 +59,12 @@
             data-bs-toggle="collapse"
             data-bs-target="#navbarNav"
             aria-controls="navbarNav"
-            aria-expanded="false"
+            aria-expanded="true"
             aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav;">
+          <div class="collapse navbar-collapse" id="navbarDropdown;">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a
@@ -79,12 +79,26 @@
                 <a class="nav-link" href="about.html" style="color: yellow"
                   >About</a
                 >
-              </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html" style="color: yellow"
                   >Contact</a
                 >
               </li>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="projects.html" style="color: gold"
+                >Projects</a
+              >
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown link
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
             </ul>
           </div>
         </div>
@@ -94,7 +108,7 @@
          <div class="img-wrapper">
                 <img class="img-responsive" src="./images/landing-background.jpg"
                 alt="landing-background"
-                style="height: 690px; width: 100%">
+                style="height: 750px; width: 100%">
              <div class="img-overlay">
               <a href="./projects.html"><button class="btn btn-md btn-warning" style="border: solid purple;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 700;color: orangered;">Pixel Perfect</button></a>
              </div>
