--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@ class="navbar-container"
       data-bs-toggle="collapse"
       data-bs-target="#navbarNav"
       aria-controls="navbarNav"
-      aria-expanded="false"
+      aria-expanded="true"
       aria-label="Toggle navigation"
     >
       <span class="navbar-toggler-icon"></span>
