--- a/index.html
+++ b/index.html
@@ -4,86 +4,89 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Joshua Jackson Portfolio</title>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <style>
-   .img-wrapper {
-  position: relative;
-  width: 100%;
-  
- }
+    .img-wrapper {
+      position: relative;
+      width: 100%;
+    }
 
-.img-overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  text-align: center;
-  ;
-  
-}
+    .img-overlay {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      text-align: center;
+    }
 
-.img-overlay:before {
-  content: ' ';
-  display: block;
-  /* adjust 'height' to position overlay content vertically */
-  height: 33%;
- 
-}
+    .img-overlay:before {
+      content: " ";
+      display: block;
+      /* adjust 'height' to position overlay content vertically */
+      height: 33%;
+    }
   </style>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="padding:0;" >
-  
-        <div class="container-fluid" style="background-image: url(./images/landing-background.jpg);">
-          <a class="navbar-brand" href="index.html"
-            ><img
-              src="./images/jj-gold-logo.png"
-              alt="j-j-logo-fixed"
-              height="70"
-              style="border-radius: 40%"
-          /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="true"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarDropdown;">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="#"
-                  style="color: yellow"
-                  >Home</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html" style="color: yellow"
-                  >About</a
-                >
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html" style="color: yellow"
-                  >Contact</a
-                >
-              </li>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="padding: 0">
+      <div
+        class="container-fluid"
+        style="background-image: url(./images/landing-background.jpg)"
+      >
+        <a class="navbar-brand" href="index.html"
+          ><img
+            src="./images/jj-gold-logo.png"
+            alt="j-j-logo-fixed"
+            height="70"
+            style="border-radius: 40%"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="true"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent;">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                style="color: yellow"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html" style="color: yellow"
+                >About</a
+              >
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html" style="color: yellow"
+                >Contact</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="projects.html" style="color: gold"
@@ -91,37 +94,58 @@
               >
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="true"
+              >
                 Dropdown link
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
               </ul>
-            </ul>
-          </div>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </div>
-        <div class="container-background">
-         <div class="img-wrapper">
-                <img class="img-responsive" src="./images/landing-background.jpg"
-                alt="landing-background"
-                style="height: 750px; width: 100%">
-             <div class="img-overlay">
-              <a href="./projects.html"><button class="btn btn-md btn-warning" style="border: solid purple;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 700;color: orangered;">Pixel Perfect</button></a>
-             </div>
-             </div>
+      </div>
+    </nav>
 
-        
-</div>
-    
+    <div class="container-background">
+      <div class="img-wrapper">
+        <img
+          class="img-responsive"
+          src="./images/landing-background.jpg"
+          alt="landing-background"
+          style="height: 750px; width: 100%"
+        />
+        <div class="img-overlay">
+          <a href="./projects.html"
+            ><button
+              class="btn btn-md btn-warning"
+              style="
+                border: solid purple;
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri,
+                  'Trebuchet MS', sans-serif;
+                font-weight: 700;
+                color: orangered;
+              "
+            >
+              Pixel Perfect
+            </button></a
+          >
+        </div>
+      </div>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"
-  ></script>
 </html>
